2004-01-21  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/pdftex.py, src/modules/graphics.py: Added support for
	DVI generation by pdfTeX.

2004-01-20  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Added a hook for \end{document}.

	* man/..., doc/..., setup.py, MANIFEST.in: Moved man pages into new
	directory doc. Introduced Texinfo documentation.

2004-01-17  Emmanuel Beffara  <manu@beffara.org>

	* src/cmdline.py, src/cmd_pipe.py, man/...: Added the command-line
	option "--texpath".

	* src/__init__.py, src/modules/expand.py: Fixed how 'expand' modifies
	the hooks dictionary.

2003-12-23  Emmanuel Beffara  <manu@beffara.org>

	* Makefile.in, man/...: Switched to proper hand-written man pages.

	* src/__init__.py, src/modules/expand.py: Added the 'expand' module.

2003-12-16  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Allowed backslashes in macro arguments.

2003-12-11  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/cmdline.py: Moved the standard Message class
	into the command-line part, improved GNU compliance.

	* src/info.py, src/cmd_info.py: Improved message display, enhanced
	the parsing of bad box messages.

	* src/graphics.py: Made the "graphics not found" messages into proper
	warnings.

2003-12-08  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Made messages more GNU-compliant.

2003-12-01  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/dvipdfm.py, man/...: Added support for dvipdfm.

	* src/modules/vtex.py, src/modules/graphics.py: Added support for the
	VTeX compiler.

	* src/graphics/...: Let graphics modules check for the availability of
	the converters.

	* src/__init__.py, src/util.py: Moved "prog_available" into "util".

2003-11-10  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Made errors visible even when quiet.

	* src/cmd_pipe.py: Made quietness the default in rubber-pipe.

	* Makefile.in: Made the man pages a dependency for install.
