@@ -1,1 +1,2 @@
 version = "@version@"
+moddir = "@@moddir@@"
